cambiata slide game loop aggiunto riferimento a hello phaser

--- a/helloPhaser.html
+++ b/helloPhaser.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<script type="text/javascript">
-			var game = new Phaser.Game(640, 480, Phaser.AUTO, "", null, false, false, null);
+			var game = new Phaser.Game(640, 480, Phaser.AUTO);
 
 			var BootState = {
 				preload: function() {
